Still trying to fix white space
Trying to find root issue with white space on body margin.

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,10 @@ a {
   text-decoration: none;
 }
 
+body {
+  margin: 0;
+}
+
 ul {
   list-style-type: none;
   margin: 0;
